<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal"
            app:expandedTitleMarginTop="220dp"
            app:expandedTitleTextAppearance="@style/textToolbarTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgv_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/img_about"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/transition_cook_detail_imgv_bg"/>

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/white"/>


            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@mipmap/icon_project"
                android:gravity="center"
                android:text="@string/about_project"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:columnCount="2">

                <Button
                    android:id="@+id/btn_look_core"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="12dp"
                    android:drawableStart="@mipmap/icon_core"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/about_look_core"
                    android:textColor="#6F6F6F"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btn_share_core"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="12dp"
                    android:drawableStart="@mipmap/icon_share_core"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/about_share_core"
                    android:textColor="#6F6F6F"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btn_look_bo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="12dp"
                    android:drawableStart="@mipmap/icon_boke"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/about_look_bo"
                    android:textColor="#6F6F6F"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/btn_share_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawablePadding="12dp"
                    android:drawableStart="@mipmap/icon_share_app"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:text="@string/about_share_app"
                    android:textColor="#6F6F6F"
                    android:textSize="14sp"/>

            </GridLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="22dp"
                android:drawableStart="@mipmap/icon_github"
                android:gravity="center"
                android:text="@string/about_github"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:autoLink="web"
                android:lineSpacingExtra="24dp"
                android:text="@string/about_open_source"
                android:textColorLink="@color/color_text_gray_darker"
                android:textSize="14sp" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>